--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chatui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://site-tech.github.io/Square-Google-Hackathon-2023/"
   "dependencies": {
     "@aws-sdk/client-lambda": "^3.418.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,8 +17,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "gh-pages": "^6.0.0"
   }
 }
